# node-dev-manager

./: .gitignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.electron.json  tsconfig.json  tsup.config.ts  vite.config.ts
ai-plans/: 2026-03-10-electron-migration.md  phase-01-review.md  phase-02-architecture.md  phase-03-implementation.md  phase-04-code.md  phase-05-validation.md  plan.md
ai-plans/0.1.0-2026-03-10/: 01-shell-ui-integration.md  02-extreme-compact-ui.md  03-minimal-chrome-shell.md  04-titlebar-polish.md
ai-plans/0.1.0-2026-03-11/: 01-shell-follow-up.md  02-tab-status-dot.md  03-dialog-polish-and-max-layout.md  04-tab-dot-position-and-dialog-revert.md  05-tray-single-click.md  06-root-flatten.md  07-icon-refresh.md  07-portable-build.md  08-electron-file-base-fix.md  08-tab-icon-and-delete-confirm.md  09-tab-icon-revert.md
ai-plans/0.1.0-2026-03-13/: 01-portable-icon-ico-fix.md  02-start-menu-exe-icon-fix.md  03-after-pack-exe-icon-fix.md  04-package-metadata-fill.md  05-single-instance-and-startup-check.md  06-open-at-login-setting.md  07-always-open-at-login.md
apps/desktop/: package.json  tsconfig.electron.json  tsconfig.json  tsup.config.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
electron/: after-pack.ts  ipc-channel.ts  main.ts  preload.ts  process-host.ts
plans/: 2026-03-10-electron-migration.md
src/: app.tsx
src/component/: confirm-dialog.tsx  product-icon.tsx  project-drawer.tsx  project-tabs.tsx
src/core/: project-storage.ts  (+2 more)
(+26 files in other folders)
