[package]
name = "node-dev-mgr"
version = "0.1.0"
description = "Desktop process manager for local development"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
